# functional_programming_practice

./: .clang-format  .gitignore  CMakeLists.txt  README.md  line_count.cpp  prettyprint.hpp
src/: CMakeLists.txt  action.cpp  calculate_average.cpp  concat.cpp  expected.cpp  fib.cpp  lambda.cpp  line_count.cpp  overloaded.cpp  ranges.cpp  tie.cpp  word_frequency.cpp
